# hexnumgen-rs

./: .gitignore  Cargo.toml  README.md  benchmark.py  example.py  hexnumgen.pyi  pyproject.toml  rust-toolchain.toml  rustfmt.toml
scripts/: benchmark.py  display_perf.py  efficiency.py  example.py  measure_perf.py  requirements.txt
src/: errors.rs  hex_math.rs  lib.rs  numgen.rs  threadpool.rs  traits.rs  utils.rs
src/drawing/: draw.rs  mod.rs
src/hex_math/: angle.rs  coord.rs  direction.rs  mod.rs  segment.rs
src/numgen/: astar_generator.rs  beam_generator.rs  bounds.rs  generator.rs  minmax.rs  mod.rs  path.rs  queued_path.rs
src/numgen/generators/: astar.rs  astar_parallel_split.rs  beam.rs  beam_parallel_pool.rs  beam_parallel_split.rs  mod.rs  traits.rs
src/numgen/generators/traits/: astar.rs  beam_search.rs  mod.rs  path_generator.rs  split.rs
