[package]
name = "hexnumgen"
version = "0.1.0"
edition = "2021"
default-run = "hexnumgen_cli"

[lib]
name = "hexnumgen"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "hexnumgen_cli"

[[bin]]
name = "pregen"

[profile.release]
debug = 1

[dependencies]
itertools = "0.10.5"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
clap = { version = "4.0.32", features = ["derive"] }
serde_json = "1.0.91"
regex = "1.7.0"
rand = "0.8.5"
