[package]
name = "hexnumgen"
version = "0.3.0"
edition = "2021"
rust-version = "1.70.0"
default-run = "hexnumgen_cli"

[features]
pyo3 = ["dep:pyo3"]

[lib]
name = "hexnumgen"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "hexnumgen_cli"

[[bin]]
name = "pregen"

[[bin]]
name = "draw"

[profile.release]
debug = 1

[dependencies]
# required
itertools = "0.10.5"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7.0"
rand = "0.8.5"
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
anyhow = "1.0"
parking_lot = { version = "0.12", features = ["deadlock_detection"]}
tiny-skia = "0.9"
tiny-skia-path = "*" # dependency of tiny-skia
png = "*" # dependency of tiny-skia
aho-corasick = "1.0"
lazy_static = "1.4"
# optional
pyo3 = { version = "0.18.3", features = ["extension-module"], optional = true }
